Merlin Pass/force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>This is used to hold the successful payment record for a success</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Bill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>