Merlin Pass/force-app/main/default/objects/Payment__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <description>This acts as related field for the customer reocrd</description>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>