Merlin Pass/force-app/main/default/objects/Payment__c/fields/Gross_Price__c.field-meta.xml
<CustomField>
    <fullName>Gross_Price__c</fullName>
    <label>Gross Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>