Merlin Pass/force-app/main/default/objects/Payment__c/fields/Pass__c.field-meta.xml
<CustomField>
    <fullName>Pass__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field which connect the pass to payment</description>
    <label>Pass</label>
    <referenceTo>Pass__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>